# task-sync

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  database.json  docker-compose.yml  mypy.ini  pyproject.toml  setup.sh
config/: celery.py  settings.py  urls.py
protos/: helloworld_pb2.py  helloworld_pb2_grpc.py
tasks/: admin.py  celery_tasks.py  exceptions.py  grpc_client.py  models.py  serializers.py  urls.py  views.py
tasks/admin/: __init__.py  abstract_admin.py  board_admin.py  column_admin.py  tag_admin.py  task_admin.py
tasks/emails/: test.py
tasks/grpc_services/: __init__.py  greeter.py  permission.py  user.py  user_implementation.py
tasks/grpc_services/user/: __init__.py  user_by_id.py  user_by_token.py
tasks/migrations/: 0001_initial.py  0002_alter_board_owner_id_alter_column_owner_id_and_more.py  0002_alter_taskstatus_options_and_more.py  0003_alter_board_owner_id_alter_task_owner_id_and_more.py  0003_task_deadline.py  0004_alter_board_options.py  0004_board_whitelist.py
tasks/models/: __init__.py  abs_time_stamp.py  abstract_models.py  board.py  board_model.py  column_model.py  tag_model.py  task.py  task_model.py
tasks/permissions/: __init__.py  base_permissions.py  checks.py  is_admin.py  is_admin_or_owner.py  is_admin_or_owner_permission.py  is_admin_permission.py  is_authenticated.py  is_authenticated_permission.py  is_staff.py  is_staff_permission.py
tasks/protos/: helloworld_pb2.py  helloworld_pb2.pyi  helloworld_pb2_grpc.py  permission.proto  permission_pb2.py  permission_pb2.pyi  permission_pb2_grpc.py  user.proto  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
tasks/rabbitmq/: connection.py
tasks/rabbitmq/notifications/: __init__.py  calendar_notification.py  event_notification.py
tasks/rabbitmq/producers/: __init__.py  calendar_producer.py  event.py  event_producer.py
tasks/rabbitmq_services/: connection.py  event.py
tasks/serializers/: __init__.py  board_serializer.py  column_serializer.py  task_serializer.py
tasks/views/: __init__.py  board_view.py  column_view.py  task_view.py
